--- a/playpart.html
+++ b/playpart.html
@@ -6,24 +6,60 @@
 <body>
     <h1>Sreeja Vasa acts in a play</h1>
     <h3 style="color: green;">GHOSTS</h3>
-   
-    <h4 style="font-size: 12.96px;font-family: monospace;"><b>REGINA.</b></h4> 
-    <p style="color: red; font-size: 12.96px;font-family: monospace;">[In a low voice.]</p>
-    <p style="font-size: 12.96px;font-family: monospace;">What do you want? Stop where you are. You'repositively dripping.</p>
-    <h4 style="font-size: 12.96px;font-family: monospace;"><b>ENGSTRAND.</b></h4> 
-    <p style="font-size: 12.96px;font-family: monospace;">It's the Lord's own rain, my girl.</p>
-    <h4 style="font-size: 12.96px;font-family: monospace;"><b>REGINA. </b></h4>
-    <p style="font-size: 12.96px;font-family: monospace;">It's the devil's rain, _I_ say</p>    
-    <h4 style="font-size: 12.96px;font-family: monospace;"><b>ENGSTRAND.</b></h4> 
-    <p style="font-size: 12.96px;font-family: monospace;">Lord, how you talk, Regina. </p> 
-    <p style="color: red; font-size: 12.96px;font-family: monospace;"> [Limps a step or two forward into the room.]</p> 
-    <p style="font-size: 12.96px;font-family: monospace;"> It's just this as I wanted to say-- </p>   
-    <h4 style="font-size: 12.96px;font-family: monospace;"><b>REGINA.</b></h4>
-    <p style="font-size: 12.96px;font-family: monospace;">Don't clatter so with that foot of yours, I tell you! The young</p>
-    <p style="font-size: 12.96px;font-family: monospace;">master's asleep upstairs.</p>    
-    <h4 style="font-size: 12.96px;font-family: monospace;"><b>ENGSTRAND.</b></h4> 
-    <p style="font-size: 12.96px;font-family: monospace;">Asleep? In the middle of the day?</p>
-    <h4 style="font-size: 12.96px;font-family: monospace;"><b>REGINA.</b></h4> 
-    <p style="font-size: 12.96px;font-family: monospace;">It's no business of yours.</p>
+    <h3 style="color: green;">Author : Henrik Ibsen</h3>
+    <pre>
+    [ENGSTRAND, the carpenter, stands by the garden door. His left leg
+is somewhat bent; he has a clump of wood under the sole of his boot.
+REGINA, with an empty garden syringe in her hand, hinders him from
+advancing.]
+
+REGINA. 
+[In a low voice.] 
+What do you want? Stop where you are. You're
+positively dripping.
+
+ENGSTRAND. 
+It's the Lord's own rain, my girl.
+
+REGINA. 
+It's the devil's rain, _I_ say.
+
+ENGSTRAND. 
+Lord, how you talk, Regina. [Limps a step or two forward into
+the room.] It's just this as I wanted to say--
+
+REGINA. 
+Don't clatter so with that foot of yours, I tell you! The young
+master's asleep upstairs.
+
+ENGSTRAND. 
+Asleep? In the middle of the day?
+
+REGINA. 
+It's no business of yours.
+
+ENGSTRAND. 
+I was out on the loose last night--
+
+REGINA. 
+I can quite believe that.
+
+ENGSTRAND. 
+Yes, we're weak vessels, we poor mortals, my girl--
+
+REGINA. 
+So it seems.
+
+ENGSTRAND.
+--and temptations are manifold in this world, you see. But all
+the same, I was hard at work, God knows, at half-past five this morning.
+
+REGINA.
+ Very well; only be off now. I won't stop here and have
+_rendezvous's_ [Note: This and other French words by Regina are in that
+language in the original] with you.
+
+   
+</pre>
 </body>
 </html>
