--- a/playpart.html
+++ b/playpart.html
@@ -7,59 +7,54 @@
     <h1>Sreeja Vasa acts in a play</h1>
     <h3 style="color: green;">GHOSTS</h3>
     <h3 style="color: green;">Author : Henrik Ibsen</h3>
-    <pre>
-    [ENGSTRAND, the carpenter, stands by the garden door. His left leg
-is somewhat bent; he has a clump of wood under the sole of his boot.
-REGINA, with an empty garden syringe in her hand, hinders him from
-advancing.]
+<h6>REGINA.</h6> 
+<p>[In a low voice.]</p>
+<p>What do you want? Stop where you are. You're</p>
+<p>positively dripping.</p>
 
-REGINA. 
-[In a low voice.] 
-What do you want? Stop where you are. You're
-positively dripping.
+<h6>ENGSTRAND.</h6> 
+<p>It's the Lord's own rain, my girl.</p>
 
-ENGSTRAND. 
-It's the Lord's own rain, my girl.
+<h6>REGINA.</h6>
+<p>It's the devil's rain, _I_ say.</p>
 
-REGINA. 
-It's the devil's rain, _I_ say.
+<h6>ENGSTRAND.</h6> 
+<p>Lord, how you talk, Regina.</p> 
+<p>[Limps a step or two forward intothe room.]</p>
+ <p>It's just this as I wanted to say--</p>
 
-ENGSTRAND. 
-Lord, how you talk, Regina. [Limps a step or two forward into
-the room.] It's just this as I wanted to say--
+<h6>REGINA.</h6> 
+<p>Don't clatter so with that foot of yours, I tell you! The young</p>
+<p>master's asleep upstairs.</p>
 
-REGINA. 
-Don't clatter so with that foot of yours, I tell you! The young
-master's asleep upstairs.
+<h6>ENGSTRAND.</h6> 
+<p>Asleep? In the middle of the day?</p>
 
-ENGSTRAND. 
-Asleep? In the middle of the day?
+<h6>REGINA.</h6> 
+<p>It's no business of yours.</p>
 
-REGINA. 
-It's no business of yours.
+<h6>ENGSTRAND.</h6> 
+<p>I was out on the loose last night--</p>
 
-ENGSTRAND. 
-I was out on the loose last night--
+<h6>REGINA.</h6> 
+<p>I can quite believe that.</p>
 
-REGINA. 
-I can quite believe that.
+<h6>ENGSTRAND.</h6>
+<p>Yes, we're weak vessels, we poor mortals, my girl--</p>
 
-ENGSTRAND. 
-Yes, we're weak vessels, we poor mortals, my girl--
+<h6>REGINA.</h6> 
+<p>So it seems.</p>
 
-REGINA. 
-So it seems.
+<h6>ENGSTRAND.</h6>
+<p>--and temptations are manifold in this world, you see. </p> 
+<p>But all the same, I was hard at work, God knows, at half-past five this morning.</p>
 
-ENGSTRAND.
---and temptations are manifold in this world, you see. But all
-the same, I was hard at work, God knows, at half-past five this morning.
+<h6>REGINA.</h6>
+ <p>Very well; only be off now. I won't stop here and have_rendezvous's_</p>
+ <p>[Note: This and other French words by Regina are in that language in the original] with you.</p>
+ 
+ <h6>ENGSTRAND.</h6> 
+ <p>What do you say you won't have?</p>
 
-REGINA.
- Very well; only be off now. I won't stop here and have
-_rendezvous's_ [Note: This and other French words by Regina are in that
-language in the original] with you.
-
-   
-</pre>
 </body>
 </html>
