Modified the file as set class for character speech and for direction

--- a/playpart.html
+++ b/playpart.html
@@ -1,60 +1,111 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="ibsen.css">
     <title>Acts and play</title>
 </head>
 <body>
     <h1>Sreeja Vasa acts in a play</h1>
     <h3 style="color: green;">GHOSTS</h3>
     <h3 style="color: green;">Author : Henrik Ibsen</h3>
-<h6>REGINA.</h6> 
-<p>[In a low voice.]</p>
-<p>What do you want? Stop where you are. You're</p>
-<p>positively dripping.</p>
 
-<h6>ENGSTRAND.</h6> 
-<p>It's the Lord's own rain, my girl.</p>
+<h3 class="REGINA">REGINA.</h3> 
+<p class="direction">[In a low voice.]</p>
+<p class="speech">What do you want? Stop where you are. You're</p>
+<p class="speech">positively dripping.</p>
 
-<h6>REGINA.</h6>
-<p>It's the devil's rain, _I_ say.</p>
+<h3 class="ENGSTRAND">ENGSTRAND.</h3> 
+<p class="speech">It's the Lord's own rain, my girl.</p>
 
-<h6>ENGSTRAND.</h6> 
-<p>Lord, how you talk, Regina.</p> 
-<p>[Limps a step or two forward intothe room.]</p>
- <p>It's just this as I wanted to say--</p>
+<h3 class="REGINA">REGINA.</h3>
+<p class="speech">It's the devil's rain, _I_ say.</p>
 
-<h6>REGINA.</h6> 
-<p>Don't clatter so with that foot of yours, I tell you! The young</p>
-<p>master's asleep upstairs.</p>
+<h3 class="ENGSTRAND">ENGSTRAND.</h3> 
+<p class="speech">Lord, how you talk, Regina.</p> 
+<p class="direction">[Limps a step or two forward intothe room.]</p>
+ <p class="speech">It's just this as I wanted to say--</p>
 
-<h6>ENGSTRAND.</h6> 
-<p>Asleep? In the middle of the day?</p>
+<h3 class="REGINA">REGINA.</h3> 
+<p class="speech">Don't clatter so with that foot of yours, I tell you! The young</p>
+<p class="speech">master's asleep upstairs.</p>
 
-<h6>REGINA.</h6> 
-<p>It's no business of yours.</p>
+<h3 class="ENGSTRAND">ENGSTRAND.</h3> 
+<p class="speech">Asleep? In the middle of the day?</p>
 
-<h6>ENGSTRAND.</h6> 
-<p>I was out on the loose last night--</p>
+<h3 class="REGINA">REGINA.</h3> 
+<p class="speech">It's no business of yours.</p>
 
-<h6>REGINA.</h6> 
-<p>I can quite believe that.</p>
+<h3 class="ENGSTRAND">ENGSTRAND.</h3> 
+<p class="speech">I was out on the loose last night--</p>
 
-<h6>ENGSTRAND.</h6>
-<p>Yes, we're weak vessels, we poor mortals, my girl--</p>
+<h3 class="REGINA">REGINA.</h3> 
+<p class="speech">I can quite believe that.</p>
 
-<h6>REGINA.</h6> 
-<p>So it seems.</p>
+<h3 class="ENGSTRAND">ENGSTRAND.</h3>
+<p class="speech">Yes, we're weak vessels, we poor mortals, my girl--</p>
 
-<h6>ENGSTRAND.</h6>
-<p>--and temptations are manifold in this world, you see. </p> 
-<p>But all the same, I was hard at work, God knows, at half-past five this morning.</p>
+<h3 class="REGINA">REGINA.</h3> 
+<p class="speech">So it seems.</p>
 
-<h6>REGINA.</h6>
- <p>Very well; only be off now. I won't stop here and have_rendezvous's_</p>
- <p>[Note: This and other French words by Regina are in that language in the original] with you.</p>
+<h3 class="ENGSTRAND">ENGSTRAND.</h3>
+<p class="speech">--and temptations are manifold in this world, you see. </p> 
+<p class="speech">But all the same, I was hard at work, God knows, at half-past five this morning.</p>
+
+<h3 class="REGINA">REGINA.</h3>
+ <p class="speech">Very well; only be off now. I won't stop here and have_rendezvous's_</p>
+ <p class="direction">[Note: This and other French words by Regina are in that language in the original] with you.</p>
  
- <h6>ENGSTRAND.</h6> 
- <p>What do you say you won't have?</p>
+ <h3 class="ENGSTRAND">ENGSTRAND.</h3> 
+ <p class="speech">What do you say you won't have?</p>
+<!-- Previous content here -->
+
+<!-- Three-column table -->
+<table class="character-table">
+    <thead>
+      <tr>
+        <th>Character</th>
+        <th>Actor</th>
+        <th>Understudy</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Regina</td>
+        <td>Surya</td>
+        <td>Jyothika</td>
+      </tr>
+      <tr>
+        <td>Engstrand</td>
+        <td>NTR</td>
+        <td>Rana</td>
+      </tr>
+      <tr>
+        <td>Kajol</td>
+        <td>Shah Rukh Khan</td>
+        <td>Ayushmann Khurrana</td>
+      </tr>
+      <tr>
+        <td>Vikram </td>
+        <td>Ranbir Kapoor</td>
+        <td>Alia</td>
+      </tr>
+      <tr>
+        <td>Vijay Devarakonda</td>
+        <td>Samantha</td>
+        <td>Siddu</td>
+      </tr>
+      
+    </tbody>
+  </table>
+
+  <div class="navbar">
+    <i class="fa fa-bars"></i>
+    <a  href="playpart.html"><i class="fa fa-fw fa-home"></i> Playpart</a> 
+    <a href="secondact.html"><i class="fas fa-plus"></i> Extra</a>
+    <i class="fa fa-bars"></i>
+  </div>
+
 
 </body>
 </html>
