Added ghost drama image to both files

--- a/playpart.html
+++ b/playpart.html
@@ -104,6 +104,8 @@
     <a  href="playpart.html"><i class="fa fa-fw fa-home"></i> Playpart</a> 
     <a href="secondact.html"><i class="fas fa-plus"></i> Extra</a>
     <i class="fa fa-bars"></i>
+    <img src="Ghostdrama.jpg" alt="GhostDramaImage">
+<hr>
   </div>
 
 
