--- a/secondact.html
+++ b/secondact.html
@@ -25,8 +25,10 @@
     <div class="navbar">
         <i class="fa fa-bars"></i>
         <a  href="playpart.html"><i class="fa fa-fw fa-home"></i> Playpart</a> 
-        <a href="secondact.html"><i class="fas fa-plus"></i> Extra</a>
+        <a href="secondact.html"><i class="fas fa-plus"></i> secondact</a>
         <i class="fa fa-bars"></i>
+        <img src="Ghostdrama.jpg" alt="GhostDramaImage">
+
       </div>
       
 </body>
