Modified secondact.html file

--- a/secondact.html
+++ b/secondact.html
@@ -8,15 +8,15 @@
 <body>
    
     
-    <h3 class="regina">REGINA.</h3>
+    <h3 class="REGINA">REGINA.</h3>
     <p class="speech"> I won't have any one find you here; so just you go about your business. </p>
 
-    <h3 class="engstrand">ENGSTRAND.</h3>
+    <h3 class="ENGSTRAND">ENGSTRAND.</h3>
     <p class="direction">[Advances a step or two.]</p> 
     <p class="speech">Blest if I go before I've had a talk with you. </p>
     <p class="speech">This afternoon I shall have finished my work at the school house, and then I shall take to-night's boat and be off home to the town.</p>
 
-    <h3 class="regina">REGINA.</h3>
+    <h3 class="REGINA">REGINA.</h3>
     <p class="direction">[Mutters.]</p> 
     <p class="speech">Pleasant journey to you!</p>
 
@@ -30,6 +30,5 @@
 
       </div>
       <img src="Ghostdrama.jpg" alt="GhostDramaImage">
-
 </body>
 </html>
